fix: z-index fix for homebg image

--- a/Layout/Layout.module.scss
+++ b/Layout/Layout.module.scss
@@ -7,6 +7,7 @@
   position: absolute;
   top: 3rem;
   width: 100%;
+  z-index: 2;
   a {
     color: inherit;
     font-size: 1.125rem;
