--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -11,6 +11,7 @@
   overflow: auto;
   padding: 2.5rem 2.5rem 8rem;
   transform: translateY(100%);
+  z-index: 3;
   &::-webkit-scrollbar {
     display: none;
   }
