--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -6,7 +6,7 @@
   min-height: 100vh;
   &_bg {
     position: fixed;
-    z-index: -1;
+    // z-index: -1;
     width: 95%;
     height: 95%;
     object-fit: cover;
@@ -19,6 +19,7 @@
     line-height: 1;
     text-transform: uppercase;
     font-weight: 400;
+    z-index: 1;
   }
   @include respondMax("mobile2x") {
     h1 {
