--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -50,6 +50,10 @@
         left: 16rem;
         top: 9.375rem;
       }
+      &:nth-child(3) {
+        left: 29.75rem;
+        bottom: 9.375rem;
+      }
       h4 {
         font-family: "Switzer", sans-serif;
         font-weight: 400;
